Certificados: PDF docx4j real + hash visible + hash como código verificación + Maven Pro fonts